Refactor command-line